@@ -7,4 +7,4 @@
 zenmagick.mvc.templates.ext: .tpl
 zenmagick.mvc.seo.type: realpath
 
-zenmagick.core.locale.provider: YamlLocale
+zenmagick.core.locales.provider: YamlLocale
