@@ -173,4 +173,34 @@ class ZMlocaleUtils {
         return implode("\n", $lines);
     }
 
+    /**
+     * Resolve a locale path.
+     *
+     * <p>The path given is assumed to contain the full locale as specified in the <code>$locale</code> parameter.</p>
+     * <p>The function will validate the path and if not valid will default to using just the language.</p>
+     *  
+     * @param string path The full path.
+     * @param string locale The locale.
+     * @return string A valid path or <code>null</code>.
+     *
+     */
+    public static function resolvePath($path, $locale) {
+        if (file_exists($path)) {
+            return $path;
+        }
+
+        $lt = explode('_', $locale);
+        if (2 > count($lt)) {
+            return null;
+        }
+
+        // try language
+        $path = str_replace($locale, $lt[0], $path);
+        if (file_exists($path)) {
+            return $path;
+        }
+
+        return null;
+    }
+
 }
