@@ -88,6 +88,10 @@ class ZMPomoLocale extends ZMObject implements ZMLocale {
     public function registerMOForLocale($basedir, $locale, $filename=null, $domain=self::DEFAULT_DOMAIN) {
         $filename = null == $filename ? $domain.'.mo' : $filename;
         $path = ZMFileUtils::mkPath($basedir, 'locale', $locale, 'LC_MESSAGES', $filename);
+        if (null == ($path = ZMLocaleUtils::resolvePath($path, $locale))) {
+            ZMLogging::instance()->log('unable to resolve locale path for locale = "'.$locale.'"', ZMLogging::DEBUG);
+            return;
+        }
         $this->registerMO($path, $domain);
     }
 
