@@ -168,7 +168,7 @@
             'configureLocale' => false,
 
             // same as zm_10n / zm_l10n_get
-            'zenmagick.core.locale.provider' => 'YamlLocale',
+            'zenmagick.core.locales.provider' => 'YamlLocale',
 
             // default to default in ZM themes
             'isEnableThemeDefaults' => true,
